# graph2doc

./: .gitignore  README.md  pyproject.toml
graph2doc/graph2doc/: cli.py
